Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumberUndefinedField.quorum
class Main
    Object v = undefined
    action Main
        Test(v)
    end

    action Test(number var)
    end
end
